--- a/starter-code/views/index.ejs
+++ b/starter-code/views/index.ejs
@@ -7,5 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-  </body>
+    <p class="account-message">
+      Don't have an account? <a href="/signup">Sign up</a>
+    </body>
 </html>
